services/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  ports:
    - protocol: TCP
      port: 8087
  clusterIP: None
  type: ClusterIP
