services/blog/blog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  labels:
    app: blog
spec:
  replicas: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      tolerations:
      - key: "kubernetes.io/hostname"
        operator: "Equal"
        value: "toybox"
      containers:
      - name: blog
        image: ghcr.io/erebe/blog:latest
        imagePullPolicy: Always
        args: ["httpd", "-f", "-h", "public", "-p", "8087"]
        ports:
        - containerPort: 8087

---
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  selector:
    app: blog
  ports:
    - protocol: TCP
      port: 8087
  clusterIP: None
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - blog.erebe.eu
    - blog.erebe.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: blog
          port: 8087
