services/blog/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - blog.erebe.eu
    - blog.erebe.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: blog
          port: 8087
